--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,6 @@
+
+/* Computer */
+@media screen and (max-width: 1920px){
 *{
     margin: 0;
     padding: 0;
@@ -90,5 +93,98 @@ h1 a:hover{
     color: black;
 }
 
+}
+
+/* mobile */
+@media screen and (max-width: 1023px){
+*{
+    margin: 0;
+    padding: 0;
+}
+
+header{
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(../img/background.jpg);
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+}
+
+.main{
+    margin: 0;
+    padding: 0;
+}
+
+h1{
+    margin-top: 1vh;
+    margin-left: 0vw;
+    width: 100vw;
+    text-align: center;
+}
 
 
+h1 a{
+    text-decoration: none;
+    color: white;
+    font-size: 5vw;
+    padding: 5px 20px;
+    border: 1px hidden white;
+    background-color: white;
+    color: black;
+}
+
+ul{
+    margin-top: 4vw;
+    margin-left: 0vw;
+    text-align: center;
+    list-style: none;
+    float: left;
+    width: 100vw;
+}
+
+ul li{
+    display: inline-block;
+    margin-left: 1vw;
+}
+
+ul li a{
+    text-decoration: none;
+    color: white;
+    display: inline-block;
+    padding: 5px 10px;
+    border: 1px hidden white;
+    font-size: 3vw;
+    background-color: white;
+    color: black;
+}
+
+.quote{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
+.quote h2{
+    color: white;
+    font-size: 5vw;
+    text-align: center;
+}
+
+.button{
+    position: absolute;
+    bottom: 10%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
+.btn{
+    border: 1px solid white;
+    padding: 5px 20px;
+    color: white;
+    text-decoration: none;
+    background-color: white;
+    color: black;
+    font-size: 3vw;
+}
+
+}
